# Valkeon

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  setup_cmake.bat
Applications/: HelloTriangleApplication.cpp  HelloTriangleApplication.hpp  ModelLoadingApplication.cpp  ModelLoadingApplication.hpp
Applications/CubeMap/: CMakeLists.txt
Applications/CubeMap/src/: main.cpp  main.frag  main.vert  skybox.frag  skybox.vert
Applications/Duck/: CMakeLists.txt
Applications/Duck/src/: main.cpp
Applications/HelloTriangle/: CMakeLists.txt
Applications/HelloTriangle/src/: main.cpp  main.frag  main.vert
Applications/QuadTexture/: CMakeLists.txt
Applications/QuadTexture/src/: main.cpp
Core/: Buffer.cpp  Buffer.hpp  CommandPool.cpp  CommandPool.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Swapchain.cpp  Swapchain.hpp  Synchronization.cpp  Synchronization.hpp  Types.hpp  Utils.hpp  VulkanContext.cpp  VulkanContext.hpp
Shaders/: rubberduck.vert
